--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: http://example.org/
+baseURL:https://philippine.netlify.app/
 languageCode: en-us
 title: Forty
 theme: forty
@@ -6,7 +6,7 @@ googleAnalytics: ''
 disqusShortname: ''
 params:
   banner:
-    buttonText: Get Started
+    buttonText: Have a look
     subtitle: |-
       Here is my portfolio websit.
     title: Hi, my name is Philippine
@@ -50,31 +50,21 @@ params:
   image: ''
   name: Philippine Bonnaud
   navigation:
-    button1:
-      - name: Get Started
-        url: blogs
-    button2:
-      - name: Log In
-        url: '#'
     links:
-      - name: Home
+      - name: Main page
         url: '#'
-      - name: Blogs
-        url: blogs
-      - name: Generic Blog
-        url: blogs/ipsum
-      - name: Elements
-        url: elements.html
-    menu: Menu
-    subtitle: By HTML5 Up
-    title: Forty
+      - name: About
+        url: blogs/About
+      - name: coding projects in R and Python
+        url: blogslayer2
+    title: My portfolio
   tiles:
     enable: yes
     showcase:
-      - image: pic01.jpg
-        subtitle: Ipsum Dolor Sit Amet
-        title: Aliquam
-        url: blogs/aliquam
+      - image: cvpic.jpg
+        subtitle: A little more about me
+        title: About
+        url: blogs/About
       - image: pic02.jpg
         subtitle: Feugiat Amet Tempus
         title: Tempus
@@ -96,7 +86,7 @@ params:
         title: Etiam
         url: blogs/ipsum
   two:
-    buttonText: Get Started
+    buttonText: have a look
     enable: yes
     subtitle: "Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero.
       \n    Mauris aliquet magna magna sed nunc rhoncus pharetra. \n    Pellentesque
